Fix the main profile button avatar having too much padding.

Before I landed crrev.com/2859193004 GridLayout didn't take into account
the view's border. The main profile button was adding its own padding to
account for that problem. After that patch landed it meant it was
doubly-padded. This patch removes the extra padding.

BUG=721660

Review-Url: https://codereview.chromium.org/2876343002
Cr-Commit-Position: refs/heads/master@{#472211}

Former-commit-id: 2d5a6e2316c416cd9e012430dd473fe1fadc953d